--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: CritFix
 author: etan
 description: 'Fixes for de-synced critical hits.'
 version: '${project.version}'
-main: etan.critfix.CritFix
+main: me.etan.critfix.CritFix
 api-version: '1.20'
